--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>15.0.1</version>
+        </dependency>
     </dependencies>
 
     <plugins>
